clients made @media for phone and tablet

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="cards">
-              <img src="./images/portrait1.jpg" alt="чоловік-дизайнер посміхається" width="270" />
+              <img src="./images/portrait1.jpg" class="team__portrait" alt="чоловік-дизайнер посміхається" />
               <div class="cards__text">
                 <h3 class="cards__title">Ігор Дем'яненко</h3>
                 <p lang="en" class="cards__position">Product Designer</p>
@@ -215,8 +215,8 @@
             <li class="cards">
               <img
                 src="./images/portrait2.jpg"
+                 class="team__portrait"
                 alt="фронтенд девелопер жінка посміхається"
-                width="270"
               />
               <div class="cards__text">
                 <h3 class="cards__title">Ольга Рєпіна</h3>
@@ -278,7 +278,7 @@
               </div>
             </li>
             <li class="cards">
-              <img src="./images/portrait3.jpg" alt="маркетолог чоловік посміхаєтсья" width="270" />
+              <img src="./images/portrait3.jpg" class="team__portrait" alt="маркетолог чоловік посміхаєтсья"/>
               <div class="cards__text">
                 <h3 class="cards__title">Микола Тарасов</h3>
                 <p lang="en" class="cards__position">Marketing</p>
@@ -341,8 +341,8 @@
             <li class="cards">
               <img
                 src="./images/portrait4.jpg"
+                 class="team__portrait"
                 alt="ЮИ дизайнер посміхається портрет"
-                width="270"
               />
               <div class="cards__text">
                 <h3 class="cards__title">Михайло Єрмаков</h3>
