--- a/portfolio.html
+++ b/portfolio.html
@@ -267,7 +267,7 @@
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__box">
-          <div>
+          <div class="footer__boxlogo">
             <a href="./index.html" class="footer__logo logo">
               Web
               <span class="logo--footer">Studio</span>
@@ -302,7 +302,7 @@
               </div>
             </address>
           </div>
-          <dsiv>
+          <div class="footer__secondbox">
             <p class="footer__join">приєднуйтесь</p>
             <ul class="footer__sociallinks">
               <li>
@@ -358,8 +358,8 @@
                 </a>
               </li>
             </ul>
-          </dsiv>
-          <form>
+          </div>
+          <form class="footer__form">
             <p class="footer__subscribe">Підпишіться на розсилку</p>
             <div class="footer__lastbox">
               <input
