--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
         <div class="header__nav">
           <nav class="nav">
             <a href="./index.html" class="logo">Web<span class="logo--header">Studio</span></a>
+            
+            <!-- Burger Menu -->
+            <button 
+              type="button" 
+              class="header__mobilebutton js-open-menu" 
+              aria-expanded="false" 
+              data-menu-button>
+              <svg 
+                width="40" 
+                height="40" 
+                arial-label="перемикач мобільного меню">
+                  <use class="header__icon-cross" href="./images/sprite.svg#icon-menu_40px"></use>
+              </svg>
+            </button>
+            <!-- <div class="menu-container js-menu-container" id="menu-container"> </div> -->
+
+
+<use class="header__icon-menu" href="./images/sprite.svg#icon-menu_40px"></use>
+
+
             <ul class="menu">
               <li class="menu__item"><a href=" ./" class="menu__link--current">Студія</a></li>
               <li class="menu__item">
@@ -683,5 +703,94 @@
         </form>
       </div>
     <script src="./js/modal.js"></script>
+
+
+<div class="backdrop is-hidden js-menu-container" data-modal>
+      <div class="modal">
+        
+            <button 
+              type="button" 
+              class="header__mobilebutton js-close-menu" 
+              aria-expanded="false" 
+              data-menu-button>
+              <svg 
+                width="40" 
+                height="40" 
+                arial-label="перемикач мобільного меню">
+                  <use class="header__icon-menu" href="./images/sprite.svg#icon-close_40px"></use>
+              </svg>
+            </button>            
+
+        <form action="" class="formbackdrop js-speaker-form">
+          <strong class="title-form">Залиште свої дані, ми вам передзвонимо</strong>
+          <div class="form-field">
+            <label class="name-field" for="name">Ім'я</label>
+            <input
+              class="labelfield"
+              type="text"
+              name="name"
+              id="name"
+              autocomplete="given-name"
+              autofocus
+            />
+            <svg class="register-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-email-black-18dp-1"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label class="name-field" for="tel">Телефон</label>
+            <input class="labelfield" type="tel" name="tel" id="tel" autocomplete="tel" />
+            <svg class="register-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-person-black-18dp-1"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label class="name-field" for="mail">Пошта</label>
+            <input class="labelfield" type="email" name="mail" id="mail" autocomplete="email" />
+            <svg class="register-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-phone-black-18dp-1"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label class="name-field" for="comment">Коментар</label>
+            <textarea
+              class="labelfield"
+              name="comment"
+              id="comment"
+              rows="10"
+              placeholder="Введіть текст"
+            ></textarea>
+          </div>
+          <div class="termscondition">
+            <label class="register-agreement">
+              <input
+                class="register-checkbox"
+                type="checkbox"
+                name="user-agreement"
+              />
+
+              <svg class="register-agreement-icon" width="16" height="15">
+                <use class="icon-uncheck" href="./images/sprite.svg#icon-unchecked"></use>
+                <use class="icon-check" href="./images/sprite.svg#icon-icon-check"></use>
+              </svg>
+              <span class="register-agreement-text"
+                >Погоджуюся з розсилкою та приймаю
+                <a class="link-term" href="google.com" target="_blank"> Умови договору</a></span
+              >
+            </label>
+          </div>
+          <button class="button field" type="submit">Відправити</button>
+        </form>
+      </div>
+
+
+     <!-- Бібліотека для правильного блокування скролу (додаємо перед скриптом для моб.меню) -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script scr="./js/mobile-menu.js" ></script>
   </body>
 </html>
