made svg correct size in tablet version

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <ul class="navcontacts">
             <li class="navcontacts__item">
               <a href="mailto:info@devstudio.com" class="navcontacts__link">
-                <svg class="navcontacts__icon" width="16" height="12">
+                <svg class="navcontacts__icon navcontacts__icon--envelope">
                   <use href="./images/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -60,7 +60,7 @@
             </li>
             <li class="navcontacts__item">
               <a href="tel:+380961111111" class="navcontacts__link">
-                <svg class="navcontacts__icon" width="10" height="16">
+                <svg class="navcontacts__icon navcontacts__icon--smartphone">
                   <use href="./images/sprite.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
