changed width to 100%

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 src="./images/portrait1.jpg"
                 class="team__portrait"
                 alt="чоловік-дизайнер посміхається"
-                width="450"
+                width="100%"
               />
               <div class="cards__text">
                 <h3 class="cards__title">Ігор Дем'яненко</h3>
@@ -240,7 +240,7 @@
                 src="./images/portrait2.jpg"
                 class="team__portrait"
                 alt="фронтенд девелопер жінка посміхається"
-                width="450"
+                width="100%"
               />
               <div class="cards__text">
                 <h3 class="cards__title">Ольга Рєпіна</h3>
@@ -306,7 +306,7 @@
                 src="./images/portrait3.jpg"
                 class="team__portrait"
                 alt="маркетолог чоловік посміхаєтсья"
-                width="450"
+                width="100%"
               />
               <div class="cards__text">
                 <h3 class="cards__title">Микола Тарасов</h3>
@@ -372,7 +372,7 @@
                 src="./images/portrait4.jpg"
                 class="team__portrait"
                 alt="ЮИ дизайнер посміхається портрет"
-                width="450"
+                width="100%"
               />
               <div class="cards__text">
                 <h3 class="cards__title">Михайло Єрмаков</h3>
