--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img src="./images/portfolio1.jpg" alt="проєкт 1 веб-сайт" width="450" />
+                  <img src="./images/portfolio1.jpg" alt="проєкт 1 веб-сайт" width="100%" />
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -100,7 +100,7 @@
                   <img
                     src="./images/portfolio2.jpg"
                     alt="проєкт 2 дизайн постера баскетбол"
-                    width="450"
+                    width="100%"
                   />
                   <div class="portfolios__overlay">
                     <p>
@@ -122,7 +122,7 @@
                   <img
                     src="./images/portfolio3.jpg"
                     alt="проєкт 3 додаток для ресторану"
-                    width="450"
+                    width="100%"
                   />
                   <div class="portfolios__overlay">
                     <p>
@@ -144,7 +144,7 @@
                   <img
                     src="./images/portfolio4.jpg"
                     alt="проєкт 4 навушники маркетинг"
-                    width="450"
+                    width="100%"
                   />
                   <div class="portfolios__overlay">
                     <p>
@@ -166,7 +166,7 @@
                   <img
                     src="./images/portfolio5.jpg"
                     alt="проєкт 5 дизайн для коробок"
-                    width="450"
+                    width="100%"
                   />
                   <div class="portfolios__overlay">
                     <p>
@@ -185,7 +185,11 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img src="./images/portfolio6.jpg" alt="проєкт 6 веб-сайт страница" width="450" />
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="проєкт 6 веб-сайт страница"
+                    width="100%"
+                  />
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -203,7 +207,11 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img src="./images/portfolio7.jpg" alt="проєкт 7 дизайн до видання" width="450" />
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="проєкт 7 дизайн до видання"
+                    width="100%"
+                  />
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -224,7 +232,7 @@
                   <img
                     src="./images/portfolio8.jpg"
                     alt="проєкт 8 маркетинг к проєкту ЛАБ"
-                    width="450"
+                    width="100%"
                   />
                   <div class="portfolios__overlay">
                     <p>
@@ -243,7 +251,7 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img src="./images/portfolio9.jpg" alt="проєкт 9 додаток" width="450" />
+                  <img src="./images/portfolio9.jpg" alt="проєкт 9 додаток" width="100%" />
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
