--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
         <div class="header__nav">
           <nav class="nav">
             <a href="./index.html" class="logo">Web<span class="logo--header">Studio</span></a>
+
             <ul class="menu">
               <li class="menu__item"><a href=" ./" class="menu__link">Студія</a></li>
               <li class="menu__item">
@@ -47,6 +48,18 @@
               >
             </li>
           </ul>
+          <!-- Burger Menu -->
+
+          <button
+            type="button"
+            class="header__mobilebutton js-open-menu"
+            aria-expanded="false"
+            data-menu-button
+          >
+            <svg width="40" height="40" arial-label="перемикач мобільного меню">
+              <use class="header__icon-cross" href="./images/sprite.svg#icon-menu_40px"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </header>
@@ -79,7 +92,12 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img src="./images/portfolio1.jpg" alt="проєкт 1 веб-сайт" width="100%" />
+                  <img
+                    srcset="./images/portfolio1.jpg 1x, ./images/portfolio1-2x.jpg 2x"
+                    src="./images/portfolio1.jpg"
+                    alt="проєкт 1 веб-сайт"
+                    width="100%"
+                  />
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -98,6 +116,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio2.jpg 1x, ./images/portfolio2-2x.jpg 2x"
                     src="./images/portfolio2.jpg"
                     alt="проєкт 2 дизайн постера баскетбол"
                     width="100%"
@@ -120,6 +139,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio3.jpg 1x, ./images/portfolio3-2x.jpg 2x"
                     src="./images/portfolio3.jpg"
                     alt="проєкт 3 додаток для ресторану"
                     width="100%"
@@ -142,6 +162,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio4.jpg 1x, ./images/portfolio4-2x.jpg 2x"
                     src="./images/portfolio4.jpg"
                     alt="проєкт 4 навушники маркетинг"
                     width="100%"
@@ -164,6 +185,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio5.jpg 1x, ./images/portfolio5-2x.jpg 2x"
                     src="./images/portfolio5.jpg"
                     alt="проєкт 5 дизайн для коробок"
                     width="100%"
@@ -186,6 +208,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio6.jpg 1x, ./images/portfolio6-2x.jpg 2x"
                     src="./images/portfolio6.jpg"
                     alt="проєкт 6 веб-сайт страница"
                     width="100%"
@@ -208,6 +231,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio7.jpg 1x, ./images/portfolio7-2x.jpg 2x"
                     src="./images/portfolio7.jpg"
                     alt="проєкт 7 дизайн до видання"
                     width="100%"
@@ -230,6 +254,7 @@
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
                   <img
+                    srcset="./images/portfolio8.jpg 1x, ./images/portfolio8-2x.jpg 2x"
                     src="./images/portfolio8.jpg"
                     alt="проєкт 8 маркетинг к проєкту ЛАБ"
                     width="100%"
@@ -251,7 +276,12 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img src="./images/portfolio9.jpg" alt="проєкт 9 додаток" width="100%" />
+                  <img
+                    srcset="./images/portfolio9.jpg 1x, ./images/portfolio9-2x.jpg 2x"
+                    src="./images/portfolio9.jpg"
+                    alt="проєкт 9 додаток"
+                    width="100%"
+                  />
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -389,5 +419,70 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden js-menu-container">
+      <div class="mobile-menu">
+        <div class="mobile-menu__button">
+          <button class="header__mobilebutton js-close-menu" type="button">
+            <svg width="40" height="40">
+              <use class="header__icon-menu" href="./images/sprite.svg#icon-close_40px"></use>
+            </svg>
+          </button>
+        </div>
+        <ul class="mobile__menu">
+          <li class="menu__item"><a href=" ./" class="menu__link">Студія</a></li>
+          <li class="menu__item">
+            <a href=" ./portfolio.html" class="menu__link--current">Портфоліо</a>
+          </li>
+          <li class="menu__item"><a href=" ./contacts.html" class="menu__link">Контакти</a></li>
+        </ul>
+
+        <ul class="navcontacts__mobile">
+          <li class="navcontacts__item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="navcontacts__link navcontacts__link--envelope"
+            >
+              <svg class="navcontacts__icon navcontacts__icon--envelope">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="navcontacts__item">
+            <a href="tel:+380961111111" class="navcontacts__link navcontacts__link--smartphone">
+              <svg class="navcontacts__icon navcontacts__icon--smartphone">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+
+        <ul class="mobile-media-list">
+          <li class="mobile-media-item">
+            <a href="" class="mobile-media-link link">Instagram</a>
+          </li>
+
+          <li class="mobile-media-item">
+            <a href="" class="mobile-media-link link">Twitter</a>
+          </li>
+          <li class="mobile-media-item">
+            <a href="" class="mobile-media-link link">Facebook</a>
+          </li>
+          <li class="mobile-media-item">
+            <a href="" class="mobile-media-link link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Бібліотека для правильного блокування скролу (додаємо перед скриптом для моб.меню) -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
