made hero images with min-resolution and different images - different media screen width

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,12 +115,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio2.jpg 1x, ./images/portfolio2-2x.jpg 2x"
-                    src="./images/portfolio2.jpg"
-                    alt="проєкт 2 дизайн постера баскетбол"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio2-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio2.jpg"
+                      alt="проєкт 2 дизайн постера баскетбол"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -138,12 +140,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio3.jpg 1x, ./images/portfolio3-2x.jpg 2x"
-                    src="./images/portfolio3.jpg"
-                    alt="проєкт 3 додаток для ресторану"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio3-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio3.jpg"
+                      alt="проєкт 3 додаток для ресторану"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -161,12 +165,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio4.jpg 1x, ./images/portfolio4-2x.jpg 2x"
-                    src="./images/portfolio4.jpg"
-                    alt="проєкт 4 навушники маркетинг"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio4-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio4.jpg"
+                      alt="проєкт 4 навушники маркетинг"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -184,12 +190,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio5.jpg 1x, ./images/portfolio5-2x.jpg 2x"
-                    src="./images/portfolio5.jpg"
-                    alt="проєкт 5 дизайн для коробок"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio5-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio5.jpg"
+                      alt="проєкт 5 дизайн для коробок"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -207,12 +215,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio6.jpg 1x, ./images/portfolio6-2x.jpg 2x"
-                    src="./images/portfolio6.jpg"
-                    alt="проєкт 6 веб-сайт страница"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio6-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio6.jpg"
+                      alt="проєкт 6 веб-сайт страница"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -230,12 +240,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio7.jpg 1x, ./images/portfolio7-2x.jpg 2x"
-                    src="./images/portfolio7.jpg"
-                    alt="проєкт 7 дизайн до видання"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio7-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio7.jpg"
+                      alt="проєкт 7 дизайн до видання"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -253,12 +265,14 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio8.jpg 1x, ./images/portfolio8-2x.jpg 2x"
-                    src="./images/portfolio8.jpg"
-                    alt="проєкт 8 маркетинг к проєкту ЛАБ"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio8-2x.jpg" media="(max-width: 767px)" />
+                    <img
+                      src="./images/portfolio8.jpg"
+                      alt="проєкт 8 маркетинг к проєкту ЛАБ"
+                      width="100%"
+                    />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -276,12 +290,10 @@
             <li class="portfolios__item">
               <a class="portfolios__link" href="">
                 <div class="portfolios__thumb">
-                  <img
-                    srcset="./images/portfolio9.jpg 1x, ./images/portfolio9-2x.jpg 2x"
-                    src="./images/portfolio9.jpg"
-                    alt="проєкт 9 додаток"
-                    width="100%"
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio9-2x.jpg" media="(max-width: 767px)" />
+                    <img src="./images/portfolio9.jpg" alt="проєкт 9 додаток" width="100%" />
+                  </picture>
                   <div class="portfolios__overlay">
                     <p>
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
