--- a/index.html
+++ b/index.html
@@ -169,12 +169,27 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="cards">
-              <img
-                src="./images/portrait1.jpg"
-                class="team__portrait"
-                alt="чоловік-дизайнер посміхається"
-                width="100%"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/ihor-desk.jpg 1x, ./images/team/ihor-desk-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/ihor-tab.jpg 1x, ./images/team/ihor-tab-x2.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/ihor-mob.jpg 1x, ./images/team/ihor-mob-x2.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+
+                <img
+                  src="./images/team/ihor-mob.jpg"
+                  class="team__portrait"
+                  alt="чоловік-дизайнер посміхається"
+                  width="100%"
+                />
+              </picture>
               <div class="cards__text">
                 <h3 class="cards__title">Ігор Дем'яненко</h3>
                 <p lang="en" class="cards__position">Product Designer</p>
@@ -235,12 +250,27 @@
               </div>
             </li>
             <li class="cards">
-              <img
-                src="./images/portrait2.jpg"
-                class="team__portrait"
-                alt="фронтенд девелопер жінка посміхається"
-                width="100%"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/olga-desk.jpg 1x, ./images/team/olga-desk-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/olga-tab.jpg 1x, ./images/team/olga-tab-x2.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/olga-mob.jpg 1x, ./images/team/olga-mob-x2.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+
+                <img
+                  src="./images/team/olga-mob.jpg"
+                  class="team__portrait"
+                  alt="фронтенд девелопер жінка посміхається"
+                  width="100%"
+                />
+              </picture>
               <div class="cards__text">
                 <h3 class="cards__title">Ольга Рєпіна</h3>
                 <p lang="en" class="cards__position">Frontend Developer</p>
@@ -301,12 +331,27 @@
               </div>
             </li>
             <li class="cards">
-              <img
-                src="./images/portrait3.jpg"
-                class="team__portrait"
-                alt="маркетолог чоловік посміхаєтсья"
-                width="100%"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/nik-desk.jpg 1x, ./images/team/nik-desk-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/nik-tab.jpg 1x, ./images/team/nik-tab-x2.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/nik-mob.jpg 1x, ./images/team/nik-mob-x2.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+
+                <img
+                  src="./images/team/nik-mob.jpg"
+                  class="team__portrait"
+                  alt="маркетолог чоловік посміхаєтсья"
+                  width="100%"
+                />
+              </picture>
               <div class="cards__text">
                 <h3 class="cards__title">Микола Тарасов</h3>
                 <p lang="en" class="cards__position">Marketing</p>
@@ -367,12 +412,27 @@
               </div>
             </li>
             <li class="cards">
-              <img
-                src="./images/portrait4.jpg"
-                class="team__portrait"
-                alt="ЮИ дизайнер посміхається портрет"
-                width="100%"
-              />
+              <picture>
+                <source
+                  srcset="./images/team/misha-desk.jpg 1x, ./images/team/misha-desk-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/team/misha-tab.jpg 1x, ./images/team/misha-tab-x2.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/team/misha-mob.jpg 1x, ./images/team/misha-mob-x2.jpg 2x"
+                  media="(min-width: 320px)"
+                />
+
+                <img
+                  src="./images/team/misha-mob.jpg"
+                  class="team__portrait"
+                  alt="ЮИ дизайнер посміхається портрет"
+                  width="100%"
+                />
+              </picture>
               <div class="cards__text">
                 <h3 class="cards__title">Михайло Єрмаков</h3>
                 <p lang="en" class="cards__position">UI Designer</p>
