--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             aria-expanded="false"
             data-menu-button
           >
-            <svg width="40" height="40" arial-label="перемикач мобільного меню">
+            <svg width="40" height="40">
               <use class="header__icon-cross" href="./images/sprite.svg#icon-menu_40px"></use>
             </svg>
           </button>
@@ -187,7 +187,7 @@
                   src="./images/team/ihor-mob.jpg"
                   class="team__portrait"
                   alt="чоловік-дизайнер посміхається"
-                  width="100%"
+                  style="max-width: 100%"
                 />
               </picture>
               <div class="cards__text">
@@ -268,7 +268,7 @@
                   src="./images/team/olga-mob.jpg"
                   class="team__portrait"
                   alt="фронтенд девелопер жінка посміхається"
-                  width="100%"
+                  style="max-width: 100%"
                 />
               </picture>
               <div class="cards__text">
@@ -349,7 +349,7 @@
                   src="./images/team/nik-mob.jpg"
                   class="team__portrait"
                   alt="маркетолог чоловік посміхаєтсья"
-                  width="100%"
+                  style="max-width: 100%"
                 />
               </picture>
               <div class="cards__text">
@@ -430,7 +430,7 @@
                   src="./images/team/misha-mob.jpg"
                   class="team__portrait"
                   alt="ЮИ дизайнер посміхається портрет"
-                  width="100%"
+                  style="max-width: 100%"
                 />
               </picture>
               <div class="cards__text">
@@ -712,7 +712,7 @@
             <use href="./images/sprite.svg#icon-Vector"></use>
           </svg>
         </button>
-        <form action="" class="formbackdrop js-speaker-form">
+        <form class="formbackdrop js-speaker-form">
           <strong class="title-form">Залиште свої дані, ми вам передзвонимо</strong>
           <div class="form-field">
             <label class="name-field" for="name">Ім'я</label>
