--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             aria-expanded="false"
             data-menu-button
           >
-            <svg width="40" height="40" arial-label="перемикач мобільного меню">
+            <svg width="40" height="40">
               <use class="header__icon-cross" href="./images/sprite.svg#icon-menu_40px"></use>
             </svg>
           </button>
@@ -96,7 +96,7 @@
                     srcset="./images/portfolio1.jpg 1x, ./images/portfolio1-2x.jpg 2x"
                     src="./images/portfolio1.jpg"
                     alt="проєкт 1 веб-сайт"
-                    width="100%"
+                    style="max-width: 100%"
                   />
                   <div class="portfolios__overlay">
                     <p>
@@ -120,7 +120,7 @@
                     <img
                       src="./images/portfolio2.jpg"
                       alt="проєкт 2 дизайн постера баскетбол"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -145,7 +145,7 @@
                     <img
                       src="./images/portfolio3.jpg"
                       alt="проєкт 3 додаток для ресторану"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -170,7 +170,7 @@
                     <img
                       src="./images/portfolio4.jpg"
                       alt="проєкт 4 навушники маркетинг"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -195,7 +195,7 @@
                     <img
                       src="./images/portfolio5.jpg"
                       alt="проєкт 5 дизайн для коробок"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -220,7 +220,7 @@
                     <img
                       src="./images/portfolio6.jpg"
                       alt="проєкт 6 веб-сайт страница"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -245,7 +245,7 @@
                     <img
                       src="./images/portfolio7.jpg"
                       alt="проєкт 7 дизайн до видання"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -270,7 +270,7 @@
                     <img
                       src="./images/portfolio8.jpg"
                       alt="проєкт 8 маркетинг к проєкту ЛАБ"
-                      width="100%"
+                      style="max-width: 100%"
                     />
                   </picture>
                   <div class="portfolios__overlay">
@@ -292,7 +292,11 @@
                 <div class="portfolios__thumb">
                   <picture>
                     <source srcset="./images/portfolio9-2x.jpg" media="(max-width: 767px)" />
-                    <img src="./images/portfolio9.jpg" alt="проєкт 9 додаток" width="100%" />
+                    <img
+                      src="./images/portfolio9.jpg"
+                      alt="проєкт 9 додаток"
+                      style="max-width: 100%"
+                    />
                   </picture>
                   <div class="portfolios__overlay">
                     <p>
