made doing menu with x1 x2 images

--- a/index.html
+++ b/index.html
@@ -134,27 +134,45 @@
           <h2 class="doing__title">Чим ми займаємося</h2>
           <ul class="doing__list">
             <li class="doing__item">
-              <img
-                src="./images/about-1.jpg"
-                alt="реалізація готового алгоритму через код"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="./images/doing/doing1.jpg 1x, ./images/doing/doing1-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  src="./images/doing/doing1.jpg"
+                  alt="реалізація готового алгоритму через код"
+                  width="370"
+                />
+              </picture>
               <div class="doing__position">
                 <p>Десктопні додатки</p>
               </div>
             </li>
             <li class="doing__item">
-              <img
-                src="./images/about-2.jpg"
-                alt="намальовані варіанти дизайну сайту на телефоні"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="./images/doing/doing2.jpg 1x, ./images/doing/doing2-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  src="./images/doing/doing2.jpg"
+                  alt="намальовані варіанти дизайну сайту на телефоні"
+                  width="370"
+                />
+              </picture>
               <div class="doing__position">
                 <p>Мобільні додатки</p>
               </div>
             </li>
             <li class="doing__item">
-              <img src="./images/about-3.jpg" alt="вибор ти підбір кольору" width="370" />
+              <picture>
+                <source
+                  srcset="./images/doing/doing3.jpg 1x, ./images/doing/doing3-x2.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <img src="./images/doing/doing3.jpg" alt="вибор ти підбір кольору" width="370" />
+              </picture>
               <div class="doing__position">
                 <p>Дизайнерські рішення</p>
               </div>
@@ -188,6 +206,7 @@
                   class="team__portrait"
                   alt="чоловік-дизайнер посміхається"
                   style="max-width: 100%"
+                  loading="lazy"
                 />
               </picture>
               <div class="cards__text">
@@ -269,6 +288,7 @@
                   class="team__portrait"
                   alt="фронтенд девелопер жінка посміхається"
                   style="max-width: 100%"
+                  loading="lazy"
                 />
               </picture>
               <div class="cards__text">
@@ -350,6 +370,7 @@
                   class="team__portrait"
                   alt="маркетолог чоловік посміхаєтсья"
                   style="max-width: 100%"
+                  loading="lazy"
                 />
               </picture>
               <div class="cards__text">
@@ -431,6 +452,7 @@
                   class="team__portrait"
                   alt="ЮИ дизайнер посміхається портрет"
                   style="max-width: 100%"
+                  loading="lazy"
                 />
               </picture>
               <div class="cards__text">
