1) прибрав outline з контейнера 2) у футер align-items: baseline 3) додав паддинг в feature при mobile та tablet 4) 5) додав паддинг до input у footer до 480px, щоб не щільно був до границь 6) пофіксив зображення команди, тепер для х2 та десктоп версії вони є

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 />
 
                 <img
-                  src="./images/team/ihor-mob.jpg"
+                  src="./images/team/ihor-mob-x2.jpg"
                   class="team__portrait"
                   alt="чоловік-дизайнер посміхається"
                   style="max-width: 100%"
